Changed main language to English

--- a/default.html
+++ b/default.html
@@ -1,8 +1,8 @@
 <html>
   <img src='https://i.gyazo.com/cf4f68f94b939c99ccfd0d9f8f51976c.png' height="100" width="300">
-  <br><br> Bem vindo ao servidor <b>PLAYERNAME</b>! Obrigado por se registar!
-  <br> Informações sobre a sua conta:
+  <br><br> Welcome to the server <b>PLAYERNAME</b>! Thank you for joining us!
+  <br> Some information about you:
   <br> IP: PADDRESS
-  <br> Data de Registo: DREG
-  <br><br> Divirta-se! Visite-nos em https://github.com/bruxo00/SAMPMailJS
+  <br> Register Date: DREG
+  <br><br> Have fun! Visit us on https://github.com/bruxo00/SAMPMailJS
 </html>
